--- a/index.html
+++ b/index.html
@@ -353,41 +353,128 @@
     <div>
       <!-- HIGH VALUE ITEMS -->
       <section class="card">
-        <h2>Objetos de Alto Valor ($3000+)</h2>
-        <ul>
-          <li class="rarity-l" data-img="">Cinta Mixtape de Lance (5ª Edición): $10,000</li>
-          <li class="rarity-e" data-img="">Globo de Nieve Impresionante: $7,000</li>
-          <li class="rarity-e" data-img="Bastion_Cell.png">Celda de Bastión: $5,000</li>
-          <li class="rarity-e" data-img="Bombardier_Cell.png">Celda de Bombardero: $5,000</li>
-          <li class="rarity-r" data-img="Music_Box.png">Caja de Música: $5,000</li>
-          <li class="rarity-r" data-img="Playing_Cards.png">Cartas de Juego: $5,000</li>
-          <li class="rarity-e" data-img="Leaper_Pulse_Unit.png">Unidad de Pulso Saltador: $5,000</li>
-          <li class="rarity-r" data-img="Red_Coral_Jewelry.png">Joyería de Coral Rojo: $5,000</li>
-          <li class="rarity-e" data-img="Rocketeer_Driver.png">Controlador Cohete: $5,000</li>
-          <li class="rarity-e" data-img="Power_Rod.png">Barra de Energía: $5,500</li>
-          <li class="rarity-e" data-img="Magnetic_Accelerator.png">Acelerador Magnético: $5,500</li>
-          <li class="rarity-r" data-img="Music_Album.png">Álbum de Música: $3,000</li>
-          <li class="rarity-c" data-img="Silver_Teaspoon_Set.png">Juego de Cucharitas de Plata: $3,000</li>
-          <li class="rarity-c" data-img="Statuette.png">Estatuilla: $3,000</li>
-          <li class="rarity-r" data-img="">Jarrón: $3,000</li>
-          <li class="rarity-e" data-img="Mod_Components.png">Componentes de Modificación: $3,000</li>
-          <li class="rarity-r" data-img="Sentinel_Firing_Core.png">Núcleo de Disparo Centinela: $3,000</li>
-        </ul>
+        <h2>Objetos de Alto Valor</h2>
+        
+        <div class="value-tabs">
+          <button class="value-tab active" data-value="3000">$3000+</button>
+          <button class="value-tab" data-value="2000">$2000-2999</button>
+          <button class="value-tab" data-value="1000">$1000-1999</button>
+        </div>
+
+        <div class="value-content active" data-content="3000">
+          <ul>
+            <li class="rarity-l" data-img="">Reactor Reina: $13,000</li>
+            <li class="rarity-e" data-img="">Cinta Mixtape de Lance (5ª Edición): $10,000</li>
+            <li class="rarity-e" data-img="">Globo de Nieve Impresionante: $7,000</li>
+            <li class="rarity-e" data-img="Bastion_Cell.png">Celda de Bastión: $5,000</li>
+            <li class="rarity-e" data-img="Bombardier_Cell.png">Celda de Bombardero: $5,000</li>
+            <li class="rarity-e" data-img="Leaper_Pulse_Unit.png">Unidad de Pulso Saltador: $5,000</li>
+            <li class="rarity-r" data-img="Music_Box.png">Caja de Música: $5,000</li>
+            <li class="rarity-r" data-img="Playing_Cards.png">Cartas: $5,000</li>
+            <li class="rarity-r" data-img="Red_Coral_Jewelry.png">Joyería de Coral Rojo: $5,000</li>
+            <li class="rarity-e" data-img="Rocketeer_Driver.png">Controlador Cohete: $5,000</li>
+            <li class="rarity-u" data-img="Spotter_Relay.png">Retransmisor Vigía: $5,000</li>
+            <li class="rarity-e" data-img="Power_Rod.png">Barra de Energía: $5,500</li>
+            <li class="rarity-e" data-img="Magnetic_Accelerator.png">Acelerador Magnético: $5,500</li>
+            <li class="rarity-c" data-img="">Reloj de Pulsera Fino: $3,000</li>
+            <li class="rarity-r" data-img="Music_Album.png">Álbum de Música: $3,000</li>
+            <li class="rarity-e" data-img="Mod_Components.png">Componentes de Modificación: $3,000</li>
+            <li class="rarity-r" data-img="Sentinel_Firing_Core.png">Núcleo de Disparo Centinela: $3,000</li>
+            <li class="rarity-c" data-img="Silver_Teaspoon_Set.png">Juego de Cucharitas de Plata: $3,000</li>
+            <li class="rarity-c" data-img="Statuette.png">Estatuilla: $3,000</li>
+            <li class="rarity-r" data-img="">Jarrón: $3,000</li>
+          </ul>
+        </div>
+
+        <div class="value-content" data-content="2000">
+          <ul>
+            <li class="rarity-e" data-img="Exodus_Modules.png">Módulos Éxodo: $2,750</li>
+            <li class="rarity-c" data-img="Coffee_Pot.png">Café: $2,000</li>
+            <li class="rarity-r" data-img="Cooling_Fan.png">Ventilador de Refrigeración: $2,000</li>
+            <li class="rarity-c" data-img="Dart_Board.png">Diana: $2,000</li>
+            <li class="rarity-r" data-img="Electrical_Components.png">Componentes Eléctricos: $2,000</li>
+            <li class="rarity-r" data-img="Hornet_Driver.png">Hornet Driver: $2,000</li>
+            <li class="rarity-r" data-img="">Reactivos de Laboratorio: $2,000</li>
+            <li class="rarity-r" data-img="Mechanical_Components.png">Componentes Mecánicos: $2,000</li>
+            <li class="rarity-c" data-img="Painted_Box.png">Caja Pintada: $2,000</li>
+            <li class="rarity-u" data-img="">Póster de Maravillas Naturales: $2,000</li>
+            <li class="rarity-u" data-img="Pottery.png">Cerámica: $2,000</li>
+            <li class="rarity-c" data-img="">Rosario: $2,000</li>
+            <li class="rarity-r" data-img="Rocket_Thruster.png">Propulsor de Cohete: $2,000</li>
+            <li class="rarity-u" data-img="Ruined_Accordion.png">Acordeón Arruinado: $2,000</li>
+            <li class="rarity-r" data-img="">Escudo Antidisturbios Arruinado: $2,000</li>
+            <li class="rarity-r" data-img="Rusted_Gear.png">Engranaje Oxidado: $2,000</li>
+            <li class="rarity-u" data-img="Snitch_Scanner.png">Escáner Soplón: $2,000</li>
+            <li class="rarity-r" data-img="Surveyor_Vault.png">Bóveda del Topógrafo: $2,000</li>
+            <li class="rarity-r" data-img="">Arma Inutilizable: $2,000</li>
+            <li class="rarity-c" data-img="">Almohada Muy Cómoda: $2,000</li>
+          </ul>
+        </div>
+
+        <div class="value-content" data-content="1000">
+          <ul>
+            <li class="rarity-r" data-img="Advanced_ARC_Powercell.png">Célula de Energía ARC Avanzada: $1,750</li>
+            <li class="rarity-r" data-img="Advanced_Electrical_Components.png">Componentes Eléctricos Avanzados: $1,750</li>
+            <li class="rarity-r" data-img="Advanced_Mechanical_Components.png">Componentes Mecánicos Avanzados: $1,750</li>
+            <li class="rarity-u" data-img="">Agave: $1,000</li>
+            <li class="rarity-c" data-img="Air_Freshener.png">Ambientador: $1,000</li>
+            <li class="rarity-r" data-img="Alarm_Clock.png">Despertador: $1,000</li>
+            <li class="rarity-r" data-img="Antiseptic.png">Antiséptico: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Coolant.png">Refrigerante ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Flex_Rubber.png">Goma Flexible ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Motion_Core.png">Núcleo de Movimiento ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Performance_Steel.png">Acero de Rendimiento ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Synthetic_Resin.png">Resina Sintética ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Thermo_Lining.png">Revestimiento Térmico ARC: $1,000</li>
+            <li class="rarity-r" data-img="ARC_Circuitry.png">Circuitería ARC: $1,000</li>
+            <li class="rarity-r" data-img="Bicycle_Pump.png">Bomba de Bicicleta: $1,000</li>
+            <li class="rarity-c" data-img="Bloated_Tuna_Can.png">Lata de Atún Hinchada: $1,000</li>
+            <li class="rarity-r" data-img="Broken_Handheld_Radio.png">Radio de Mano Rota: $1,000</li>
+            <li class="rarity-r" data-img="">Táser Roto: $1,000</li>
+            <li class="rarity-c" data-img="Cat_Bed.png">Cama de Gato: $1,000</li>
+            <li class="rarity-e" data-img="Complex_Gun_Parts.png">Partes de Arma Complejas: $1,000</li>
+            <li class="rarity-r" data-img="Coolant.png">Refrigerante: $1,000</li>
+            <li class="rarity-r" data-img="Cooling_Coil.png">Bobina de Refrigeración: $1,000</li>
+            <li class="rarity-r" data-img="Damaged_Heat_Sink.png">Disipador de Calor Dañado: $1,000</li>
+            <li class="rarity-u" data-img="">Fútbol Desinflado: $1,000</li>
+            <li class="rarity-u" data-img="Duct_Tape.png">Cinta Aislante: $1,000</li>
+            <li class="rarity-c" data-img="Empty_Wine_Bottle.png">Botella de Vino Vacía: $1,000</li>
+            <li class="rarity-c" data-img="Expired_Pasta.png">Pasta Caducada: $1,000</li>
+            <li class="rarity-u" data-img="">Fertilizante: $1,000</li>
+            <li class="rarity-c" data-img="Film_Reel.png">Rollo de Película: $1,000</li>
+            <li class="rarity-r" data-img="Fried_Motherboard.png">Placa Madre Frita: $1,000</li>
+            <li class="rarity-r" data-img="Industrial_Battery.png">Batería Industrial: $1,000</li>
+            <li class="rarity-r" data-img="Industrial_Charger.png">Cargador Industrial: $1,000</li>
+            <li class="rarity-r" data-img="Industrial_Magnet.png">Imán Industrial: $1,000</li>
+            <li class="rarity-r" data-img="">Motor: $1,000</li>
+            <li class="rarity-r" data-img="Portable_TV.png">TV Portátil: $1,000</li>
+            <li class="rarity-r" data-img="Power_Cable.png">Cable de Alimentación: $1,000</li>
+            <li class="rarity-u" data-img="Ripped_Safety_Vest.png">Chaleco de Seguridad Rasgado: $1,000</li>
+            <li class="rarity-c" data-img="Rubber_Duck.png">Pato de Goma: $1,000</li>
+            <li class="rarity-r" data-img="Rusted_Shut_Medical_Kit.png">Kit Médico Oxidado: $1,000</li>
+            <li class="rarity-r" data-img="Rusted_Tools.png">Herramientas Oxidadas: $1,000</li>
+            <li class="rarity-r" data-img="Spring_Cushion.png">Muelle Amortiguador: $1,000</li>
+            <li class="rarity-r" data-img="Toaster.png">Tostadora: $1,000</li>
+            <li class="rarity-c" data-img="Torn_Book.png">Libro Rasgado: $1,000</li>
+            <li class="rarity-r" data-img="Wasp_Driver.png">Controlador Avispa: $1,000</li>
+            <li class="rarity-r" data-img="Water_Pump.png">Bomba de Agua: $1,000</li>
+          </ul>
+        </div>
       </section>
 
       <!-- RECYCLABLE QUEST MATERIALS -->
       <section class="card">
         <h2>Reciclables para Materiales de Quest/Workshop</h2>
         <ul>
-          <li class="rarity-r" data-img="Antiseptic.png">Antiséptico: 10x Producto Químico</li>
-          <li class="rarity-r" data-img="ARC_Coolant.png">Refrigerante ARC: 16x Producto Químico</li>
-          <li class="rarity-u" data-img="Air_Freshener.png">Limpiador Doméstico: 13x Producto Químico</li>
-          <li class="rarity-r" data-img="">Reactivos de Laboratorio: 2x Producto Químico, 2x Explosivos Rudimentarios</li>
-          <li class="rarity-r" data-img="Broken_Handheld_Radio.png">Radio de Mano Rota: 3x Sensores, 3x Cables</li>
-          <li class="rarity-r" data-img="Expired_Pasta.png">Respirador Caducado: 8x Partes de Goma, 4x Tela</li>
-          <li class="rarity-r" data-img="ARC_Flex_Rubber.png">Goma Flexible ARC: 16x Partes de Goma</li>
-          <li class="rarity-u" data-img="Crude_Explosives.png">Explosivos Rudimentarios: 3x Producto Químico</li>
-          <li class="rarity-u" data-img="Durable_Cloth.png">Tela Resistente: 6x Tela</li>
+          <li class="rarity-r"><span data-img="Antiseptic.png">Antiséptico</span>: 10x <span data-img="Chemicals.png">Producto Químico</span></li>
+          <li class="rarity-r"><span data-img="ARC_Coolant.png">Refrigerante ARC</span>: 16x <span data-img="Chemicals.png">Producto Químico</span></li>
+          <li class="rarity-u"><span data-img="Air_Freshener.png">Limpiador Doméstico</span>: 13x <span data-img="Chemicals.png">Producto Químico</span></li>
+          <li class="rarity-r"><span data-img="">Reactivos de Laboratorio</span>: 2x <span data-img="Chemicals.png">Producto Químico</span>, 2x <span data-img="Crude_Explosives.png">Explosivos Rudimentarios</span></li>
+          <li class="rarity-r"><span data-img="Broken_Handheld_Radio.png">Radio de Mano Rota</span>: 3x <span data-img="Sensors.png">Sensores</span>, 3x <span data-img="Wires.png">Cables</span></li>
+          <li class="rarity-r"><span data-img="Expired_Pasta.png">Respirador Caducado</span>: 8x <span data-img="Rubber_Parts.png">Partes de Goma</span>, 4x <span data-img="Fabric.png">Tela</span></li>
+          <li class="rarity-r"><span data-img="ARC_Flex_Rubber.png">Goma Flexible ARC</span>: 16x <span data-img="Rubber_Parts.png">Partes de Goma</span></li>
+          <li class="rarity-u"><span data-img="Crude_Explosives.png">Explosivos Rudimentarios</span>: 3x <span data-img="Chemicals.png">Producto Químico</span></li>
+          <li class="rarity-u"><span data-img="Durable_Cloth.png">Tela Resistente</span>: 6x <span data-img="Fabric.png">Tela</span></li>
         </ul>
       </section>
 
@@ -409,18 +496,18 @@
       <section class="card">
         <h2>Reciclables para Componentes</h2>
         <ul>
-          <li class="rarity-r" data-img="Alarm_Clock.png">Reloj Despertador: 1x Procesador, 6x Partes de Plástico</li>
-          <li class="rarity-r" data-img="Ruined_Accordion.png">Acordeón Arruinado: 18x Partes de Goma, 3x Resorte de Acero</li>
-          <li class="rarity-r" data-img="Cooling_Coil.png">Bobina de Enfriamiento: 6x Producto Químico, 2x Resorte de Acero</li>
-          <li class="rarity-r" data-img="ARC_Synthetic_Resin.png">Resina Sintética ARC: 14x Partes de Plástico</li>
-          <li class="rarity-r" data-img="ARC_Performance_Steel.png">Acero de Rendimiento ARC: 12x Partes de Metal</li>
-          <li class="rarity-u" data-img="Ripped_Safety_Vest.png">Chaleco de Seguridad Roto: 2x Imán, 13x Tela</li>
-          <li class="rarity-r" data-img="ARC_Thermo_Lining.png">Revestimiento Térmico ARC: 16x Tela</li>
-          <li class="rarity-r" data-img="Spring_Cushion.png">Cojín de Resorte: 2x Tela Resistente, 2x Resorte de Acero</li>
-          <li class="rarity-r" data-img="">Taser Roto: 2x Batería, 2x Cables</li>
-          <li class="rarity-u" data-img="Candle_Holder.png">Portavelas: 8x Partes de Metal</li>
-          <li class="rarity-r" data-img="Coolant.png">Refrigerante: 5x Producto Químico, 2x Aceite</li>
-          <li class="rarity-r" data-img="Cooling_Fan.png">Ventilador de Enfriamiento: 14x Partes de Plástico, 4x Batería</li>
+          <li class="rarity-r"><span data-img="Alarm_Clock.png">Reloj Despertador</span>: 1x <span data-img="Processor.png">Procesador</span>, 6x <span data-img="Plastic_Parts.png">Partes de Plástico</span></li>
+          <li class="rarity-r"><span data-img="Ruined_Accordion.png">Acordeón Arruinado</span>: 18x <span data-img="Rubber_Parts.png">Partes de Goma</span>, 3x <span data-img="Steel_Spring.png">Resorte de Acero</span></li>
+          <li class="rarity-r"><span data-img="Cooling_Coil.png">Bobina de Enfriamiento</span>: 6x <span data-img="Chemicals.png">Producto Químico</span>, 2x <span data-img="Steel_Spring.png">Resorte de Acero</span></li>
+          <li class="rarity-r"><span data-img="ARC_Synthetic_Resin.png">Resina Sintética ARC</span>: 14x <span data-img="Plastic_Parts.png">Partes de Plástico</span></li>
+          <li class="rarity-r"><span data-img="ARC_Performance_Steel.png">Acero de Rendimiento ARC</span>: 12x <span data-img="Metal_Parts.png">Partes de Metal</span></li>
+          <li class="rarity-u"><span data-img="Ripped_Safety_Vest.png">Chaleco de Seguridad Roto</span>: 2x <span data-img="Magnet.png">Imán</span>, 13x <span data-img="Fabric.png">Tela</span></li>
+          <li class="rarity-r"><span data-img="ARC_Thermo_Lining.png">Revestimiento Térmico ARC</span>: 16x <span data-img="Fabric.png">Tela</span></li>
+          <li class="rarity-r"><span data-img="Spring_Cushion.png">Cojín de Resorte</span>: 2x <span data-img="Durable_Cloth.png">Tela Resistente</span>, 2x <span data-img="Steel_Spring.png">Resorte de Acero</span></li>
+          <li class="rarity-r"><span data-img="">Taser Roto</span>: 2x <span data-img="Battery.png">Batería</span>, 2x <span data-img="Wires.png">Cables</span></li>
+          <li class="rarity-u"><span data-img="Candle_Holder.png">Portavelas</span>: 8x <span data-img="Metal_Parts.png">Partes de Metal</span></li>
+          <li class="rarity-r"><span data-img="Coolant.png">Refrigerante</span>: 5x <span data-img="Chemicals.png">Producto Químico</span>, 2x <span data-img="Oil.png">Aceite</span></li>
+          <li class="rarity-r"><span data-img="Cooling_Fan.png">Ventilador de Enfriamiento</span>: 14x <span data-img="Plastic_Parts.png">Partes de Plástico</span>, 4x <span data-img="Battery.png">Batería</span></li>
         </ul>
       </section>
     </div>
@@ -434,4 +521,3 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
-
