--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
     <section class="card" style="max-width: 600px; margin: 2rem auto;">
       <h2>Objetos de Misión</h2>
       <ul>
-        <li class="rarity-u" data-img="ARC_Alloy.png">Misión 2 (Clearer Skies) - Aleación ARC: x 3</li>
-        <li class="rarity-u" data-img="Wires.png">Misión 3 (Trash Into Treasure) - Cables: x 6</li>
-        <li class="rarity-u" data-img="Battery.png">Misión 3 (Trash Into Treasure) - Batería: x 1</li>
-        <li class="rarity-r" data-img="Wasp_Driver.png">Misión 10 (The Trifecta) - Controlador de Avispa: x 2</li>
-        <li class="rarity-r" data-img="Hornet_Driver.png">Misión 10 (The Trifecta) - Controlador de Avispón: x 2</li>
-        <li class="rarity-u" data-img="Snitch_Scanner.png">Misión 10 (The Trifecta) - Escáner Soplón: x 2</li>
-        <li class="rarity-r" data-img="Surveyor_Vault.png">Misión 17 (Mixed Signals) - Depósito de Vigilante: x 1</li>
-        <li class="rarity-r" data-img="Antiseptic.png">Misión 19 (Doctor's Orders) - Antiséptico: x 2</li>
-        <li class="rarity-r" data-img="Syringe.png">Misión 19 (Doctor's Orders) - Jeringa: x 1</li>
-        <li class="rarity-u" data-img="Durable_Cloth.png">Misión 19 (Doctor's Orders) - Tela Resistente: x 1</li>
-        <li class="rarity-u" data-img="Great_Mullein.png">Misión 19 (Doctor's Orders) - Gran Gordolobo: x 1</li>
-        <li class="rarity-r" data-img="">Misión 21 (A Reveal in Ruins) - Analizador ESR: x 1</li>
-        <li class="rarity-r" data-img="">Misión 22 (Broken Monument) - Cinta de la Primera Ola: x 1</li>
-        <li class="rarity-r" data-img="">Misión 22 (Broken Monument) - Brújula de la Primera Ola: x 1</li>
-        <li class="rarity-r" data-img="">Misión 22 (Broken Monument) - Raciones de la Primera Ola: x 1</li>
-        <li class="rarity-r" data-img="">Misión 25 (A Lay of the Land) - Escáneres LiDAR: x 1</li>
-        <li class="rarity-u" data-img="Wires.png">Misión 30 (Eyes on the Prize) - Cables: x 3</li>
-        <li class="rarity-u" data-img="Fertilizer.png">Misión 33 (Unexpected Initiative) - Fertilizante: x 1</li>
-        <li class="rarity-r" data-img="Water_Pump.png">Misión 33 (Unexpected Initiative) - Bomba de Agua: x 1</li>
-        <li class="rarity-r" data-img="">Misión 35 (Celeste's Journals) - Diario de Celeste: x 2</li>
-        <li class="rarity-r" data-img="">Misión 37 (The Major's Footlocker) - Recuerdos de la Mayor Aiva: x 1</li>
-        <li class="rarity-e" data-img="Rocketeer_Driver.png">Misión 38 (Out of the Shadows) - Controlador de Cohetero: x 1</li>
-        <li class="rarity-u" data-img="Wires.png">Misión 42 (After Rain Comes) - Cables: x 5</li>
-        <li class="rarity-u" data-img="Battery.png">Misión 42 (After Rain Comes) - Batería: x 2</li>
-        <li class="rarity-e" data-img="">Misión 47 (Into the Fray) - Unidad de Pulso de Saltador: x 1</li>
+        <li class="rarity-u" data-img="ARC_Alloy.png">Misión 2 (Cielos Más Claros) - Aleación ARC: x 3</li>
+        <li class="rarity-u" data-img="Wires.png">Misión 3 (Basura en Tesoro) - Cables: x 6</li>
+        <li class="rarity-u" data-img="Battery.png">Misión 3 (Basura en Tesoro) - Batería: x 1</li>
+        <li class="rarity-r" data-img="Wasp_Driver.png">Misión 10 (La Trifecta) - Controlador de Avispa: x 2</li>
+        <li class="rarity-r" data-img="Hornet_Driver.png">Misión 10 (La Trifecta) - Controlador de Avispón: x 2</li>
+        <li class="rarity-u" data-img="Snitch_Scanner.png">Misión 10 (La Trifecta) - Escáner Soplón: x 2</li>
+        <li class="rarity-r" data-img="Surveyor_Vault.png">Misión 17 (Señales Mixtas) - Depósito de Vigilante: x 1</li>
+        <li class="rarity-r" data-img="Antiseptic.png">Misión 19 (Órdenes del Doctor) - Antiséptico: x 2</li>
+        <li class="rarity-r" data-img="Syringe.png">Misión 19 (Órdenes del Doctor) - Jeringa: x 1</li>
+        <li class="rarity-u" data-img="Durable_Cloth.png">Misión 19 (Órdenes del Doctor) - Tela Resistente: x 1</li>
+        <li class="rarity-u" data-img="Great_Mullein.png">Misión 19 (Órdenes del Doctor) - Gran Gordolobo: x 1</li>
+        <li class="rarity-r" data-img="">Misión 21 (Una Revelación en Ruinas) - Analizador ESR: x 1</li>
+        <li class="rarity-r" data-img="">Misión 22 (Monumento Roto) - Cinta de la Primera Ola: x 1</li>
+        <li class="rarity-r" data-img="">Misión 22 (Monumento Roto) - Brújula de la Primera Ola: x 1</li>
+        <li class="rarity-r" data-img="">Misión 22 (Monumento Roto) - Raciones de la Primera Ola: x 1</li>
+        <li class="rarity-r" data-img="">Misión 25 (Reconocimiento del Terreno) - Escáneres LiDAR: x 1</li>
+        <li class="rarity-u" data-img="Wires.png">Misión 30 (Ojos en el Premio) - Cables: x 3</li>
+        <li class="rarity-u" data-img="Fertilizer.png">Misión 33 (Iniciativa Inesperada) - Fertilizante: x 1</li>
+        <li class="rarity-r" data-img="Water_Pump.png">Misión 33 (Iniciativa Inesperada) - Bomba de Agua: x 1</li>
+        <li class="rarity-r" data-img="">Misión 35 (Los Diarios de Celeste) - Diario de Celeste: x 2</li>
+        <li class="rarity-r" data-img="">Misión 37 (El Baúl de la Mayor) - Recuerdos de la Mayor Aiva: x 1</li>
+        <li class="rarity-e" data-img="Rocketeer_Driver.png">Misión 38 (Saliendo de las Sombras) - Controlador de Cohetero: x 1</li>
+        <li class="rarity-u" data-img="Wires.png">Misión 42 (Después de la Lluvia) - Cables: x 5</li>
+        <li class="rarity-u" data-img="Battery.png">Misión 42 (Después de la Lluvia) - Batería: x 2</li>
+        <li class="rarity-e" data-img="">Misión 47 (A la Batalla) - Unidad de Pulso de Saltador: x 1</li>
       </ul>
     </section>
   </script>
