--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guía Esencial de Objetos - ARC Raiders</title>
-  <link rel="icon" type="image/png" href="./img/Favicon.png">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="icon" type="image/png" href="img/Favicon.png">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Pantalla de carga inicial */
     #loading-screen {
@@ -365,9 +365,9 @@
   </div>
 
   <!-- Scripts externos -->
-  <script src="./js/tracking.js"></script>
-  <script src="./js/database.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="js/tracking.js"></script>
+  <script src="js/database.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
 
