--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guía Esencial de Objetos - ARC Raiders</title>
-  <link rel="icon" type="image/png" href="img/Favicon.png">
+  <link rel="icon" type="image/png" href="gallery/Favicon.png">
   <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Pantalla de carga inicial */
@@ -264,11 +264,11 @@
           <!-- Combate -->
           <div class="cargo-category" data-item-id="cargo_combat" data-max="250000">
             <div class="cargo-header">
-              <img src="img/stage_5_Combat1.png" alt="Combate 1" class="cargo-icon">
-              <img src="img/stage_5_Combat2.png" alt="Combate 2" class="cargo-icon">
-              <img src="img/stage_5_Combat3.png" alt="Combate 3" class="cargo-icon">
-              <img src="img/stage_5_Combat4.png" alt="Combate 4" class="cargo-icon">
-              <img src="img/stage_5_Combat5.png" alt="Combate 5" class="cargo-icon">
+              <img src="gallery/stage_5_Combat1.png" alt="Combate 1" class="cargo-icon">
+              <img src="gallery/stage_5_Combat2.png" alt="Combate 2" class="cargo-icon">
+              <img src="gallery/stage_5_Combat3.png" alt="Combate 3" class="cargo-icon">
+              <img src="gallery/stage_5_Combat4.png" alt="Combate 4" class="cargo-icon">
+              <img src="gallery/stage_5_Combat5.png" alt="Combate 5" class="cargo-icon">
               <span class="cargo-name">Combate</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_combat" data-change="-1000">-</button>
@@ -285,11 +285,11 @@
           <!-- Supervivencia -->
           <div class="cargo-category" data-item-id="cargo_survival" data-max="100000">
             <div class="cargo-header">
-              <img src="img/stage_5_Survival1.png" alt="Supervivencia 1" class="cargo-icon">
-              <img src="img/stage_5_Survival2.png" alt="Supervivencia 2" class="cargo-icon">
-              <img src="img/stage_5_Survival3.png" alt="Supervivencia 3" class="cargo-icon">
-              <img src="img/stage_5_Survival4.png" alt="Supervivencia 4" class="cargo-icon">
-              <img src="img/stage_5_Survival5.png" alt="Supervivencia 5" class="cargo-icon">
+              <img src="gallery/stage_5_Survival1.png" alt="Supervivencia 1" class="cargo-icon">
+              <img src="gallery/stage_5_Survival2.png" alt="Supervivencia 2" class="cargo-icon">
+              <img src="gallery/stage_5_Survival3.png" alt="Supervivencia 3" class="cargo-icon">
+              <img src="gallery/stage_5_Survival4.png" alt="Supervivencia 4" class="cargo-icon">
+              <img src="gallery/stage_5_Survival5.png" alt="Supervivencia 5" class="cargo-icon">
               <span class="cargo-name">Supervivencia</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_survival" data-change="-1000">-</button>
@@ -306,11 +306,11 @@
           <!-- Provisiones -->
           <div class="cargo-category" data-item-id="cargo_provisions" data-max="180000">
             <div class="cargo-header">
-              <img src="img/stage_5_Provisions1.png" alt="Provisiones 1" class="cargo-icon">
-              <img src="img/stage_5_Provisions2.png" alt="Provisiones 2" class="cargo-icon">
-              <img src="img/stage_5_Provisions3.png" alt="Provisiones 3" class="cargo-icon">
-              <img src="img/stage_5_Provisions4.png" alt="Provisiones 4" class="cargo-icon">
-              <img src="img/stage_5_Provisions5.png" alt="Provisiones 5" class="cargo-icon">
+              <img src="gallery/stage_5_Provisions1.png" alt="Provisiones 1" class="cargo-icon">
+              <img src="gallery/stage_5_Provisions2.png" alt="Provisiones 2" class="cargo-icon">
+              <img src="gallery/stage_5_Provisions3.png" alt="Provisiones 3" class="cargo-icon">
+              <img src="gallery/stage_5_Provisions4.png" alt="Provisiones 4" class="cargo-icon">
+              <img src="gallery/stage_5_Provisions5.png" alt="Provisiones 5" class="cargo-icon">
               <span class="cargo-name">Provisiones</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_provisions" data-change="-1000">-</button>
@@ -327,7 +327,7 @@
           <!-- Materiales -->
           <div class="cargo-category" data-item-id="cargo_materials" data-max="300000">
             <div class="cargo-header">
-              <img src="img/stage_5_Materials.png" alt="Materiales" class="cargo-icon">
+              <img src="gallery/stage_5_Materials.png" alt="Materiales" class="cargo-icon">
               <span class="cargo-name">Materiales</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_materials" data-change="-1000">-</button>
@@ -370,6 +370,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
