--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
           <!-- Combate -->
           <div class="cargo-category" data-item-id="cargo_combat" data-max="250000">
             <div class="cargo-header">
-              <img src="img/stage_5_Combat1.png" alt="Combate 1" class="cargo-icon">
-              <img src="img/stage_5_Combat2.png" alt="Combate 2" class="cargo-icon">
-              <img src="img/stage_5_Combat3.png" alt="Combate 3" class="cargo-icon">
-              <img src="img/stage_5_Combat4.png" alt="Combate 4" class="cargo-icon">
-              <img src="img/stage_5_Combat5.png" alt="Combate 5" class="cargo-icon">
+              <img src="img/stage_5_combat1.png" alt="Combate 1" class="cargo-icon">
+              <img src="img/stage_5_combat2.png" alt="Combate 2" class="cargo-icon">
+              <img src="img/stage_5_combat3.png" alt="Combate 3" class="cargo-icon">
+              <img src="img/stage_5_combat4.png" alt="Combate 4" class="cargo-icon">
+              <img src="img/stage_5_combat5.png" alt="Combate 5" class="cargo-icon">
               <span class="cargo-name">Combate</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_combat" data-change="-1000">-</button>
@@ -285,11 +285,11 @@
           <!-- Supervivencia -->
           <div class="cargo-category" data-item-id="cargo_survival" data-max="100000">
             <div class="cargo-header">
-              <img src="img/stage_5_Survival1.png" alt="Supervivencia 1" class="cargo-icon">
-              <img src="img/stage_5_Survival2.png" alt="Supervivencia 2" class="cargo-icon">
-              <img src="img/stage_5_Survival3.png" alt="Supervivencia 3" class="cargo-icon">
-              <img src="img/stage_5_Survival4.png" alt="Supervivencia 4" class="cargo-icon">
-              <img src="img/stage_5_Survival5.png" alt="Supervivencia 5" class="cargo-icon">
+              <img src="img/stage_5_survival1.png" alt="Supervivencia 1" class="cargo-icon">
+              <img src="img/stage_5_survival2.png" alt="Supervivencia 2" class="cargo-icon">
+              <img src="img/stage_5_survival3.png" alt="Supervivencia 3" class="cargo-icon">
+              <img src="img/stage_5_survival4.png" alt="Supervivencia 4" class="cargo-icon">
+              <img src="img/stage_5_survival5.png" alt="Supervivencia 5" class="cargo-icon">
               <span class="cargo-name">Supervivencia</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_survival" data-change="-1000">-</button>
@@ -306,11 +306,11 @@
           <!-- Provisiones -->
           <div class="cargo-category" data-item-id="cargo_provisions" data-max="180000">
             <div class="cargo-header">
-              <img src="img/stage_5_Provisions1.png" alt="Provisiones 1" class="cargo-icon">
-              <img src="img/stage_5_Provisions2.png" alt="Provisiones 2" class="cargo-icon">
-              <img src="img/stage_5_Provisions3.png" alt="Provisiones 3" class="cargo-icon">
-              <img src="img/stage_5_Provisions4.png" alt="Provisiones 4" class="cargo-icon">
-              <img src="img/stage_5_Provisions5.png" alt="Provisiones 5" class="cargo-icon">
+              <img src="img/stage_5_provisions1.png" alt="Provisiones 1" class="cargo-icon">
+              <img src="img/stage_5_provisions2.png" alt="Provisiones 2" class="cargo-icon">
+              <img src="img/stage_5_provisions3.png" alt="Provisiones 3" class="cargo-icon">
+              <img src="img/stage_5_provisions4.png" alt="Provisiones 4" class="cargo-icon">
+              <img src="img/stage_5_provisions5.png" alt="Provisiones 5" class="cargo-icon">
               <span class="cargo-name">Provisiones</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_provisions" data-change="-1000">-</button>
@@ -327,7 +327,7 @@
           <!-- Materiales -->
           <div class="cargo-category" data-item-id="cargo_materials" data-max="300000">
             <div class="cargo-header">
-              <img src="img/stage_5_Materials.png" alt="Materiales" class="cargo-icon">
+              <img src="img/stage_5_materials.png" alt="Materiales" class="cargo-icon">
               <span class="cargo-name">Materiales</span>
               <span class="item-controls">
                 <button class="counter-btn" data-item-id="cargo_materials" data-change="-1000">-</button>
