--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 
   <!-- NAVEGACIÓN PRINCIPAL -->
   <nav class="main-nav">
-    <button class="nav-btn active" data-page="quest.html">Misión/Proyecto</button>
-    <button class="nav-btn" data-page="recyclables.html">Fuentes Reciclables</button>
-    <button class="nav-btn" data-page="workshops.html">Estaciones de Taller</button>
-    <button class="nav-btn" data-page="highvalue.html">Objetos de Alto Valor</button>
+  <button class="nav-btn active" data-page="quest.html">Misión/Proyecto</button>
+  <button class="nav-btn" data-page="recyclables.html">Fuentes Reciclables</button>
+  <button class="nav-btn" data-page="workshops.html">Estaciones de Taller</button>
+  <button class="nav-btn" data-page="itemsvalue.html">Objetos de Valor</button>
   </nav>
 
   <main id="content-container">
