--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
   <button class="nav-btn" data-page="recyclables.html">Fuentes Reciclables</button>
   <button class="nav-btn" data-page="workshops.html">Estaciones de Taller</button>
   <button class="nav-btn" data-page="itemsvalue.html">Objetos de Valor</button>
+  <button class="nav-btn" data-page="bulk_sales.html">Ventas Masivas</button>
   </nav>
 
   <main id="content-container">
